--- a/topics/c_content_reuse.dita
+++ b/topics/c_content_reuse.dita
@@ -7,9 +7,10 @@
     <conbody>
         <section id="section_r4h_l5d_jpb">
             <title>Handling conrefs</title>
-            <p>You can easily reuse content in DITA with the <codeph>conref</codeph> attribute.<fig id="fig_yzb_h4t_kpb">
+            <p>You can easily reuse content in DITA with the <codeph>conref</codeph> attribute.<fig
+                    id="fig_yzb_h4t_kpb">
                     <title>Example of content referencing in DITA</title>
-                    <image href="../images/oxygen-conrefs.svg" id="image_l3z_jrt_kpb">
+                    <image href="../images/oxygen-conrefs.png" id="image_l3z_jrt_kpb" width="450">
                         <alt>Example of using the conref attribute to reuse content between
                             topics</alt>
                     </image>
@@ -27,18 +28,19 @@
         <section id="section_qfv_l5d_jpb">
             <title>Handling keyrefs</title>
             <p>You can reference keywords using the <codeph>keyref</codeph> attribute. Keyrefs can
-                be used for standard text or expressions that can change, such as product names.<fig id="fig_jdn_fyt_kpb">
+                be used for standard text or expressions that can change, such as product names.<fig
+                    id="fig_jdn_fyt_kpb">
                     <title>Example of keyword referencing in DITA</title>
-                    <image href="../images/oxygen-keyrefs.svg" id="image_fct_5b5_kpb">
+                    <image href="../images/oxygen-keyrefs.png" id="image_fct_5b5_kpb" width="450">
                         <alt>Example of using keydef and keyword elements in DITA</alt>
-                        </image>
+                    </image>
                 </fig></p>
-            <p>When used improperly, keyrefs can lead to translation errors. You can avoid such
+            <p>When used improperly, keyrefs can lead to translation errors. You can minimize such
                 errors by following these tips:<ul id="ul_w43_qvt_kpb">
                     <li>Use keyrefs for terms that do not change their grammatical form, such as
                         product names or UI terms.</li>
                     <li>Avoid using keyrefs for common nouns.</li>
-                    <li>Treat keyrefs as proper nouns and don't precede them with articles.</li>
+                    <li>Treat keyrefs as proper nouns and don't precede them with an article.</li>
                 </ul></p>
             <note id="note_rlw_htt_kpb" type="tip">To avoid translation errors, it may be a good
                 idea to <xref href="t_resolving_conrefs_and_keyrefs.dita">resolve all conrefs and
