--- a/topics/c_translation_friendly_text.dita
+++ b/topics/c_translation_friendly_text.dita
@@ -49,9 +49,9 @@
         <section id="section_lnc_1kp_jpb">
             <title>Formating</title>
             <p>Search your text for unintended linebreaks and punctuation marks (such as periods in
-                place of commas). <abbreviated-form keyref="g_cat"/> tools
-                may misinterpret such characters and split sentences into separate units. This can
-                lead to translation errors and inconsistencies.</p>
+                place of commas). <abbreviated-form keyref="g_cat"/> tools may misinterpret such
+                characters and split sentences into separate units. This can lead to translation
+                errors and inconsistencies.</p>
             <p>Avoid using pagebreaks and empty lines to layout your document. The same content can
                 have a different volume in different languages.</p>
             <note id="note_kv1_gbq_jpb" type="important">When localizing a DITA project, always send
