--- a/topics/t_importing_a_dita_project_into_memoq.dita
+++ b/topics/t_importing_a_dita_project_into_memoq.dita
@@ -2,13 +2,13 @@
 <!DOCTYPE task PUBLIC "-//OASIS//DTD DITA General Task//EN" "generalTask.dtd">
 <task id="t_importing_a_dita_project_into_memoq" xml:lang="en-US" dir="ltr">
     <title>Importing a DITA project into memoQ</title>
-    <shortdesc>Learn how to import your DITA project into <term keyref="g_memoq"
-        /> while preserving the project's folder structure.</shortdesc>
+    <shortdesc>Learn how to import your DITA project into memoQ while preserving the project's
+        folder structure.</shortdesc>
     <taskbody>
         <context>
             <p>When translating a DITA project, it is important to preserve the relationships
-                between files. To import your project into memoQ without losing the project's folder
-                strucure, follow these steps:</p>
+                between files. To import your project into <term keyref="g_memoq"/> without losing
+                the project's folder strucure, follow these steps:</p>
         </context>
         <steps id="steps_tqk_mnr_jpb">
             <step>
@@ -75,7 +75,7 @@
             </step>
             <step>
                 <cmd>Click <uicontrol>…</uicontrol> next to the <uicontrol>Base path</uicontrol>
-                    field, choose the folder where your project is located, and click
+                    field, choose the folder where you keep your project, and click
                         <uicontrol>OK</uicontrol>.</cmd>
                 <info>
                     <fig id="fig_hjq_1sr_jpb">
