--- a/topics/glossary/g_oxygen_xml_editor.dita
+++ b/topics/glossary/g_oxygen_xml_editor.dita
@@ -3,5 +3,5 @@
 <glossentry id="g_oxygen" xml:lang="en-US" dir="ltr">
     <glossterm>oXygen XML Editor</glossterm>
     <glossdef>A popular XML editor offering advanced features for working with DITA
-        projects.</glossdef>
+        content.</glossdef>
 </glossentry>
