--- a/topics/c_non_translatable_content.dita
+++ b/topics/c_non_translatable_content.dita
@@ -22,9 +22,10 @@
         <section id="section_w3j_3kk_jpb">
             <title>UI text</title>
             <p>If your project contains UI terms, it's important to know whether the UI has been
-                translated, and into which languages. If the UI is not localized, you should let
-                translators know how they should handle UI text. For example, you may want them to
-                follow each UI term with its translation in brackets.</p>
+                translated, and into which languages. </p>
+            <p>If the UI is not localized, you should let translators know how they should handle UI
+                text. For example, you may want them to follow each UI term with its translation in
+                brackets.</p>
         </section>
     </conbody>
 </concept>
