--- a/topics/c_glossaries.dita
+++ b/topics/c_glossaries.dita
@@ -12,8 +12,8 @@
                 make their translations more consistent.</p>
             <note id="note_owy_djl_kpb">Most <term keyref="g_cat"/> tools enable automatic
                 terminology checks to make sure that a translator has used terms from the glossary.
-                Such checks, however, are less reliable in languages where one word can have various
-                grammatical forms.</note>
+                But remember that such checks are less reliable in languages where one word can have
+                various grammatical forms.</note>
         </section>
         <section id="section_b1n_whl_kpb">
             <title>Non-translatable text</title>
@@ -35,7 +35,7 @@
             <title>Format</title>
             <p>Glossaries (called term bases) can be developed directly in a CAT tool. Most CAT
                 tools have their own term base format, but you can use a universal format called
-                TermBase eXchange (TBX) to exchange term bases between different tools.</p>
+                TermBase eXchange (TBX) to move term bases between different tools.</p>
             <p>You can also prepare a glossary as a <term keyref="g_csv"/> file in a spreadsheet
                 editor and import it into a CAT tool.</p>
             <fig id="fig_cjc_mml_kpb">
