--- a/topics/c_content_reuse.dita
+++ b/topics/c_content_reuse.dita
@@ -18,12 +18,12 @@
             <note id="note_rz1_5ss_kpb"
                 conref="c_preparing_dita_code_for_localization.dita#c_localization_related_attributes/note_set_attr"/>
             <p>Improper use of content referencing can lead to translation errors (such as wrong
-                gramamtical forms or text not matching the context). To avoid such errors, follow
+                grammatical forms or text not matching the context). To avoid such errors, follow
                 these rules:<ul id="ul_ps1_w5t_kpb">
                     <li>Don't use conrefs for incomplete phrases. Instead, use them to reference
                         whole sentences or larger fragments.</li>
                     <li>Avoid excessive content reuse. This can make it harder for translators to
-                        know the context of translated text.</li>
+                        know the context of the translated text.</li>
                 </ul></p>
         </section>
         <section id="section_qfv_l5d_jpb">
