--- a/topics/c_localization_friendly_images.dita
+++ b/topics/c_localization_friendly_images.dita
@@ -23,7 +23,7 @@
         </section>
         <section id="section_lbr_lkf_kpb">
             <title>UI screens</title>
-            <p>If your documentation contains user interface (UI) screens, it is important to
+            <p>If your documentation contains UI screens, it's important to
                 consider whether the UI has been localized. You may need to plan the additional step
                 of capturing UI screens in each target language.</p>
         </section>
