--- a/topics/c_preparing_dita_code_for_localization.dita
+++ b/topics/c_preparing_dita_code_for_localization.dita
@@ -13,11 +13,11 @@
                 <codeblock id="codeblock_gyh_4ns_kpb">&lt;concept id="c_magic" xml:lang="en-US"></codeblock></p>
             <note id="note_set_attr" type="tip">To set an attribute of an element in <term
                     keyref="g_oxygen_xml_editor"/>, select the element, press <uicontrol>Alt +
-                    Enter</uicontrol>, and type the name of the attribute you want to set.</note>
+                    Enter</uicontrol> and type the name of the attribute you want to set.</note>
         </section>
         <section id="section_gt2_zks_kpb">
             <title>Identifying content you don't want to translate</title>
-            <p>To identify a an element you don't want to translate, set its
+            <p>To identify an element you don't want to translate, set its
                     <codeph>translate</codeph> attribute to "no":
                 <codeblock id="codeblock_id5_mqs_kpb">&lt;codeblock id="codeblock_spells" translate="no">
   let spellsLeft = 7;
