--- a/topics/t_translating_repetitions.dita
+++ b/topics/t_translating_repetitions.dita
@@ -16,7 +16,7 @@
                     </menucascade> and select all files.</cmd>
             </step>
             <step>
-                <cmd>Right-click the files and choose <uicontrol>Create View</uicontrol>.</cmd>
+                <cmd>Right-click on the files and choose <uicontrol>Create View</uicontrol>.</cmd>
                 <info>
                     <fig id="fig_q5n_zyr_jpb">
                         <image href="../images/memoq-create-view.png" id="image_ivs_jhs_jpb"
@@ -28,7 +28,7 @@
             </step>
             <step>
                 <cmd>In the <uicontrol>Create view</uicontrol> dialog, enter the <uicontrol>Name of
-                        the view</uicontrol>, select <uicontrol>Extract repetitions</uicontrol>, and
+                        the view</uicontrol>, select <uicontrol>Extract repetitions</uicontrol> and
                     click <uicontrol>OK</uicontrol>.</cmd>
                 <info>
                     <fig id="fig_exj_jzr_jpb">
@@ -39,7 +39,7 @@
                 </info>
             </step>
         </steps>
-        <result id="result_uny_kzr_jpb">Now you can work on a view containing all repetitive
+        <result id="result_uny_kzr_jpb">Now you can work on a view containing all repeting
             segments in your project.<fig id="fig_jfc_b3s_jpb">
                 <image href="../images/memoq-repetitions.png" id="image_p3j_b3s_jpb" width="800">
                     <alt>An example memoQ view containing repetitions</alt>
