--- a/topics/c_non_translatable_content.dita
+++ b/topics/c_non_translatable_content.dita
@@ -9,8 +9,8 @@
             <p>While planning the localization of your project, it's important to identify
                 fragments you don't want to translate. These can include the following: <ul id="ul_rlp_qfm_kpb">
                     <li>Proper names, such as brand names.</li>
-                    <li>Contact details (though you may need to translate for example country
-                        names).</li>
+                    <li>Contact details (though you may need to translate some details, for example
+                        country names).</li>
                     <li>UI text (if the UI has not been localized).</li>
                     <li>Code blocks (but you may want to translate comments in the code).</li>
                     <li>Legal text (you may need to handle it separately).</li>
@@ -24,7 +24,7 @@
             <title>UI text</title>
             <p>If your project contains UI terms, it's important to know whether the UI has been
                 translated, and into which languages. </p>
-            <p>If the UI hasn't been localized, you should let translators know how they should handle UI
+            <p>If the UI hasn't been localized, you should let translators know how to handle UI
                 text. For example, you may want them to follow each UI term with its translation in
                 brackets.</p>
         </section>
