--- a/topics/c_non_translatable_content.dita
+++ b/topics/c_non_translatable_content.dita
@@ -6,8 +6,9 @@
     <conbody>
         <section id="section_cvc_jfm_kpb">
             <title>Types of non-translatable content</title>
-            <p>While planning the localization of your project, it's important to identify
-                fragments you don't want to translate. These can include the following: <ul id="ul_rlp_qfm_kpb">
+            <p>While planning the localization of your project, it's important to identify fragments
+                you don't want to translate. These can include the following: <ul
+                    id="ul_rlp_qfm_kpb">
                     <li>Proper names, such as brand names.</li>
                     <li>Contact details (though you may need to translate some details, for example
                         country names).</li>
@@ -18,7 +19,6 @@
             <note id="note_s2q_qhm_kpb" type="tip">You can use <xref href="c_glossaries.dita"
                     >glossaries</xref> to let translators know which phrases they shouldn't
                 translate.</note>
-            
         </section>
         <section id="section_w3j_3kk_jpb">
             <title>UI text</title>
@@ -26,7 +26,26 @@
                 translated, and into which languages. </p>
             <p>If the UI hasn't been localized, you should let translators know how to handle UI
                 text. For example, you may want them to follow each UI term with its translation in
-                brackets.</p>
+                    brackets.<table id="table_pxw_yhb_npb">
+                    <title>Example of handling UI text translation</title>
+                    <tgroup cols="2">
+                        <colspec colname="c1" colnum="1"/>
+                        <colspec colname="c2" colnum="2"/>
+                        <thead>
+                            <row>
+                                <entry>English source</entry>
+                                <entry>Polish translation</entry>
+                            </row>
+                        </thead>
+                        <tbody>
+                            <row>
+                                <entry>Click <uicontrol>New wand</uicontrol>.</entry>
+                                <entry>Kliknij <uicontrol>New wand</uicontrol> (Nowa
+                                    różdżka).</entry>
+                            </row>
+                        </tbody>
+                    </tgroup>
+                </table></p>
         </section>
     </conbody>
 </concept>
